--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,7 @@
   <title>Portfolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Author: A.N. Author,
-    Illustrator: P. Picture, Category: Books, Price: $17.99,
-    Length: 784 pages">
+  <meta name="description" content="Author: Mansoor Soomro">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
