make changes in the introduction

--- a/src/index.html
+++ b/src/index.html
@@ -15,3 +15,10 @@
 </body>
 
 </html>
+
+
+<!-- These three commands need to be executed in order to deploy your angular build in github pages
+  push your changes to the main/master branch.
+  ng build --prod --base-href https://mansoor1998.github.io/portfolio/
+  ngh --dir dist/portfolio/browser
+-->
