--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
 </html>
 
 
-<!-- These three commands need to be executed in order to deploy your angular build in github pages
+<!-- These three commands can to be executed in order to deploy your angular build in github pages
   push your changes to the main/master branch.
-  ng build --prod --base-href https://mansoor1998.github.io/portfolio/
+  ng build --prod --base-href <github pages url>
   ngh --dir dist/portfolio/browser
 -->
